--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
       </div>
       
-      <aside style="background-image: url(img/profile_big.jpg);"></aside>
+      <aside style="background-image: url(img/logoForUser.jpg);"></aside>
       <main>
-        <h1 class="mb-0">Hi, I'm Kate Woodman</h1>
+        <h1 class="mb-0"> ljohn020</h1>
         <div class="mb-5">
-        <p class="lead mb-3">Web Designer &amp; Developer</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, magnam aut animi, excepturi voluptatum placeat dolor accusantium atque iure! Animi architecto eveniet voluptatum illo ut maiores sed, autem pariatur culpa?</p>
-        <p>Commodi, neque debitis atque cum quod, culpa repellendus voluptatum voluptatem, molestiae dicta laborum nulla corporis illum, ratione rerum quibusdam ea optio! Consectetur obcaecati facilis esse reprehenderit ipsam, facere dolorem incidunt.</p>
+        <p class="lead mb-3"> Computer Science Junior</p>
+        <p> Hello everyone, my name is Linda and I am active in various clubs including IEEE and SWE. When I'm not at the library you can find me playing with my two dogs Chestnut and Butternut.</p>
+        <!-- <p>Commodi, neque debitis atque cum quod, culpa repellendus voluptatum voluptatem, molestiae dicta laborum nulla corporis illum, ratione rerum quibusdam ea optio! Consectetur obcaecati facilis esse reprehenderit ipsam, facere dolorem incidunt.</p> -->
         </div>
 
         <p>
