--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
       <main>
         <h1 class="mb-0"> ljohn020</h1>
         <div class="mb-5">
-        <p class="lead mb-3"> Computer Science Junior</p>
-        <p> Hello everyone, my name is Linda and I am active in various clubs including IEEE and SWE. When I'm not at the library you can find me playing with my two dogs Chestnut and Butternut.</p>
-        <!-- <p>Commodi, neque debitis atque cum quod, culpa repellendus voluptatum voluptatem, molestiae dicta laborum nulla corporis illum, ratione rerum quibusdam ea optio! Consectetur obcaecati facilis esse reprehenderit ipsam, facere dolorem incidunt.</p> -->
+        <p class="lead mb-3"> Computer Science</p>
+        <p> Hello everyone, my name is Linda and I am a third year. I am active in various clubs including IEEE and SWE. When I'm not at the library you can find me playing with my two dogs Chestnut and Butternut.</p>
+        <p> Interests: Memes, Food, and Travel.</p>
+        <p> Hobbies: Playing with my dogs and programming <p>
         </div>
 
         <p>
