--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
       </div>
       
-      <aside style="background-image: url(img/logoForUser.jpg);"></aside>
+      <aside style="background-image: url(img/userprofile.jpg);"></aside>
       <main>
-        <h1 class="mb-0"> ljohn020</h1>
+        <h1 class="mb-0"> erive031</h1>
         <div class="mb-5">
         <p class="lead mb-3"> Computer Science</p>
-        <p> Hello everyone, my name is Linda and I am a third year. I am active in various clubs including IEEE and SWE. When I'm not at the library you can find me playing with my two dogs Chestnut and Butternut.</p>
+        <p> Hello everyone, my name is Emily Rivera and I am a third year. I am active in various clubs including IEEE and SWE. When I'm not at the library you can find me playing with my two dogs Chestnut and Butternut.</p>
         <p> Interests: Memes, Food, and Travel.</p>
         <p> Hobbies: Playing with my dogs and programming <p>
         </div>
